# src/swagger.json
@@ -1397,7 +1397,7 @@
 					}
 				]
 			},
-			"Pick_NotebookEntity.Exclude_keyofNotebookEntity.-or-idcad-or-studentName-or-studentRegistration-or-idpep-or-reservationDate-or-evaluatedDate-or-notebookDirectory__": {
+			"Pick_NotebookEntity.Exclude_keyofNotebookEntity.idcad-or-studentName-or-studentRegistration-or-idpep-or-reservationDate-or-evaluatedDate-or-notebookDirectory__": {
 				"properties": {
 					"idvol": {
 						"type": "number",
@@ -1505,12 +1505,12 @@
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
-			"Omit_NotebookEntity.-or-idcad-or-studentName-or-studentRegistration-or-idpep-or-reservationDate-or-evaluatedDate-or-notebookDirectory_": {
-				"$ref": "#/components/schemas/Pick_NotebookEntity.Exclude_keyofNotebookEntity.-or-idcad-or-studentName-or-studentRegistration-or-idpep-or-reservationDate-or-evaluatedDate-or-notebookDirectory__",
+			"Omit_%2F%2Feslint-disable-next-lineprettier%2FprettierNotebookEntity.idcad-or-studentName-or-studentRegistration-or-idpep-or-reservationDate-or-evaluatedDate-or-notebookDirectory_": {
+				"$ref": "#/components/schemas/Pick_NotebookEntity.Exclude_keyofNotebookEntity.idcad-or-studentName-or-studentRegistration-or-idpep-or-reservationDate-or-evaluatedDate-or-notebookDirectory__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"EvaluateNotebookEntity": {
-				"$ref": "#/components/schemas/Omit_NotebookEntity.-or-idcad-or-studentName-or-studentRegistration-or-idpep-or-reservationDate-or-evaluatedDate-or-notebookDirectory_"
+				"$ref": "#/components/schemas/Omit_%2F%2Feslint-disable-next-lineprettier%2FprettierNotebookEntity.idcad-or-studentName-or-studentRegistration-or-idpep-or-reservationDate-or-evaluatedDate-or-notebookDirectory_"
 			},
 			"Pick_AvailableNotebookRowEntity.notebookId_": {
 				"properties": {
@@ -3589,7 +3589,7 @@
 		},
 		"/book-evaluations": {
 			"get": {
-				"operationId": "GetVolunteersAttendanceMetrics",
+				"operationId": "GetVBookEvaluationList",
 				"responses": {
 					"200": {
 						"description": "Successfully generated the metrics",
@@ -3647,6 +3647,36 @@
 						}
 					}
 				}
+			}
+		},
+		"/book-evaluations/download": {
+			"get": {
+				"operationId": "GetVBookEvaluationListDownload",
+				"responses": {
+					"200": {
+						"description": "Successfully generated the metrics",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string",
+									"format": "byte"
+								}
+							}
+						}
+					}
+				},
+				"description": "Download list all book evaluations.\r\n\r\n(The user must have bookPermissionn, which is checked using JWT)\r\n Filter: ?classes=399,404,405& (filter by class ids - separator \",\" (comma))",
+				"tags": [
+					"Book evaluation"
+				],
+				"security": [
+					{
+						"jwt": [
+							"bookPermission"
+						]
+					}
+				],
+				"parameters": []
 			}
 		},
 		"/book-evaluations/{evaluationId}": {
